# boids

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  demo.cpp  main.cpp  plotter.cpp
BoidLib/: Options.h
BoidLib/modelAOS/: Boid.cpp  Boid.h  KDTree.cpp  KDTree.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
BoidLib/modelAOSOA/: Boid.cpp  Boid.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
BoidLib/modelSOA/: BoidsArray.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
model/: Boid.cpp  Boid.h  Options.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
modelAOS/: Boid.cpp  Boid.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
modelSOA/: BoidsArray.h  Simulator.cpp  Simulator.h  WindowManager.cpp  WindowManager.h
result_processing/: plotter.py
